--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Django==2.2.4
 django-extensions==2.1.3
 Faker==2.0.0
+gunicorn==19.9.0
 python-dateutil==2.8.0
 python-utils==2.3.0
 pytz==2019.2
@@ -8,3 +9,4 @@ six==1.12.0
 sqlparse==0.3.0
 text-unidecode==1.2
 Unipath==1.1
+django-heroku
